--- a/html/about.html
+++ b/html/about.html
@@ -14,7 +14,7 @@
                 <img src="../imaj/NicePng_eagle-logo-png_857793.png" alt="">
             </div>
         <ul class="nav-main">
-            <li> <a   href="home.html">home</a></li>
+            <li> <a   href="index.html">home</a></li>
             <li> <a   href="menu.html">menu</a></li>
             <li > <a  href="servaices.html">servaices</a></li>
             <li > <a  class ="active" href="about.html">about</a></li>
