--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
                 <img src="../imaj/NicePng_eagle-logo-png_857793.png" alt="">
             </div>
         <ul class="nav-main">
-            <li> <a  class ="active" href="home.html">home</a></li>
+            <li> <a  class ="active" href="index.html">home</a></li>
             <li> <a   href="menu.html">menu</a></li>
             <li > <a  href="servaices.html">servaices</a></li>
             <li > <a   href="about.html">about</a></li>
