--- a/News.html
+++ b/News.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ready</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <header>
         <div class="container">
             <div class="logo">
-                <img src="../imaj/NicePng_eagle-logo-png_857793.png" alt="">
+                <img src="/imaj/NicePng_eagle-logo-png_857793.png" alt="">
             </div>
         <ul class="nav-main">
             <li> <a   href="index.html">home</a></li>
