--- a/contact.html
+++ b/contact.html
@@ -5,24 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ready</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <header>
         <div class="container">
             <div class="logo">
-                <img src="../imaj/NicePng_eagle-logo-png_857793.png" alt="">
+                <img src="/imaj/NicePng_eagle-logo-png_857793.png" alt="">
             </div>
         <ul class="nav-main">
             <li> <a   href="index.html">home</a></li>
             <li> <a   href="menu.html">menu</a></li>
-            <li > <a class ="active" href="servaices.html">servaices</a></li>
+            <li > <a  href="servaices.html">servaices</a></li>
             <li > <a   href="about.html">about</a></li>
-            <li > <a  href="contact.html">contact</a></li>
+            <li > <a class ="active" href="contact.html">contact</a></li>
             <li> <a   href="News.html">News</a></li>
         </ul>
         <div class="welcom">
-            <h1>Welcom to servaices</h1>
+            <h1>Welcom to contact</h1>
         </div>
     </header>
 </body>
